Fix shadow clipping

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -81,7 +81,6 @@ html,body
 .soundBoard-category-album-sounds
   width: 100%
   max-width: 100%
-  overflow-x: hidden
 
   display: grid
   grid-template-columns: 100%
